Update and rename Tugas Bu himma  melda new.html to index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p> <a href="https://library.usu.ac.id/"><i><b>Profil Perpustakaan Universitas Sumatera Utara</b></i></a>
 <p> Berikut ini adalah gambar Perpustakaan Universitas Sumatera Utara :</p>
 	<p>
-		<img src="foto perpustakaan.jpg"Width="200" Height="150" 
+		<img src="images/foto perpustakaan.jpg"Width="200" Height="150" 
 		
 	<p> Perpustakaan Universitas Sumatera Utara merupakan unit penunjang kegiatan pendidikan, 
 	pengajaran, penelitian, dan pengabdian kepada masyarakat di Universitas Sumatera Utara</b></i></a>
@@ -20,12 +20,12 @@
 <p> Berikut ini merupakan audio Perpustakaan Universitas Sumatera Utara :</p>
 	<p>
 		<audio controls>
-		<source src = "melda.mp3"/>
+		<source src = "images/musik.mp3" alt="audio/mpeg">
 		<p> <b> Video Perpustakaan Universitas Sumatera Utara</b></p>
 	<p>Video dari Youtube</p>
 	
 	<video controls="true">
-		<source src ="usu perpus.MP4"/>
+		<source src ="images/melda.MP4"/>
 		
 	<p> <b>
 <h3>FORM LIBRARY </h3>
