--- a/index.html
+++ b/index.html
@@ -11,25 +11,18 @@
 </p>
 <p> <a href="https://library.usu.ac.id/"><i><b>Profil Perpustakaan Universitas Sumatera Utara</b></i></a>
 <p> Berikut ini adalah gambar Perpustakaan Universitas Sumatera Utara :</p>
-	<p>
-		<img src="images/foto perpustakaan.jpg"Width="200" Height="150" 
-		
+	<p><img src="images/foto perpustakaan.jpg" Width="200" Height="150" alt=/></p>
 	<p> Perpustakaan Universitas Sumatera Utara merupakan unit penunjang kegiatan pendidikan, 
-	pengajaran, penelitian, dan pengabdian kepada masyarakat di Universitas Sumatera Utara</b></i></a>
-	<p>
+	pengajaran, penelitian, dan pengabdian kepada masyarakat di Universitas Sumatera Utara</b></i></a></p>
 <p> Berikut ini merupakan audio Perpustakaan Universitas Sumatera Utara :</p>
-	<p>
-		<audio controls>
-		<source src = "images/musik.mp3" alt="audio/mpeg">
-		<p> <b> Video Perpustakaan Universitas Sumatera Utara</b></p>
-	<p>Video dari Youtube</p>
-	
-	<video controls="true">
-		<source src ="images/melda.MP4"/>
-		
-	<p> <b>
-<h3>FORM LIBRARY </h3>
-    
+<p>
+<audio controls>
+<source src = "images/musik.mp3" alt="audio/mpeg">
+<p><b>Video Perpustakaan Universitas Sumatera Utara</b></p>
+<p>Video dari Youtube</p>
+<video controls="true">
+<source src ="images/melda.mp4" type="video/mp4"></video>
+<p><b><h3>FORM LIBRARY</h3></b>
 <form action="" method="post">
 <table>
     <tr>
@@ -77,7 +70,6 @@
 </form>
 <table border="i">
 <caption><b>Table Bahan Buku</b></caption>
-
 <th>Nama Peminjam</th>
 <th>Judul Buku</th>
 <th>Tanggal Peminjaman</th>
@@ -119,9 +111,7 @@
 	 <td>Mahmudi</td>
 </tr>
 </table>
-<p>
 <h3>FORM PEMESANAN BUKU</h3>
-    
 <form action="" method="post">
 <table>
     <tr>
@@ -240,4 +230,4 @@
 </table>
 </form>
 </body>
-</html> <!--akhir dokumen HTML -->
+</html>
