--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <p><b><h3>FORM LIBRARY</h3></b>
 <form action="" method="post">
 <table>
-    <tr>
+    <th>Formulir Aggota Perpustakaan</th>
+	<tr>
         <td>Nama</td>
         <td><input type="text"></td>
     </tr>
@@ -44,8 +45,7 @@
     <tr>
         <td>Jenis Kelamin</td>
         <td><input type="radio" name="jk"> laki-laki
-            <input type="radio" name="jk"> perempuan
-        </td>
+            <input type="radio" name="jk"> perempuan</td>
     </tr>
     <tr>
         <td>Jabatan</td>
