--- a/index.html
+++ b/index.html
@@ -9,6 +9,94 @@
 <i>Ini Homepage</i> pertama saya, 
 <p>karena saya baru belajar tentang cara membuat <b><i>homepage</i></b>
 </p>
+	<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Melda Lia Lestari</title>
+  </head>
+  <body>
+    <h1>Hello, Selamat Datang di Website Perpustakaan SUKA BACA</h1>
+    <nav class="navbar navbar-default">
+    <div class="container-fuild">
+    <!-- Brand and toggle get grouped for better mobile display-->
+    <div class="navbar-header">
+    <button type="button" class="navbar-toggle collasped" data-toggle="collasped"data-target="#bs-example-navbar-collapse-1"aria-expanded="false">
+    <span class="sr-only">toggle navigation</span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="#">Brand </a>
+    </div>
+    <!-- Collect the nav links,froms,and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-colapse-I">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">link <span (current)></span></a></li>
+                <li><a href="#"> Link </a></li>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"aria-expanded="false">dropdown<spanclass="caret"></span></a>
+                <li><a href="#"> Action</a></li>
+                <li><a href="#">another action</a></li>
+                <li><a href="#">something else here</a></li>
+                <li role="seperator" class="divider"></li>
+                <li><a href="#">one more seperated link</a> </li></ul></li></ul>
+                <form class="navbar-form navbar-left">
+                <div class="form-group
+                 <input type="text" class="form-control" placeholder="search">
+            </div>
+            <button type="submit" class="btn btn-default">submit</button>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+            <a href="#"class="dropdown-toggle"data-toggle="dropdown"role="button"ariahaspopup="true"ariaexpanded="false">dropdown
+            <spanclass="caret"></span></a><ul class="dropdown-menu">
+            <li><a href="#">action</a></li>
+            <li><a href="#">another action</a>
+            <li role="separator"class="divider"></li>
+            </ul></li></ul></div> <!--/.navbar-collapse-->
+    </div><!--/.container-fuild-->
+    </nav>
+
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    </div>
+    <div class="mb-3">
+      <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">First</th>
+          <th scope="col">Last</th>
+          <th scope="col">Handle</th>
+        </tr>
+      </thead>
+      <tbody class="table-group-divider">
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Jacob</td>
+          <td>Thornton</td>
+          <td>@fat</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td colspan="2">Larry the Bird</td>
+          <td>@twitter</td>
+        </tr>
+      </tbody>
+    </table>
 <p> <a href="https://library.usu.ac.id/"><i><b>Profil Perpustakaan Universitas Sumatera Utara</b></i></a>
 <p> Berikut ini adalah gambar Perpustakaan Universitas Sumatera Utara :</p>
 	<p><img src="images/foto perpustakaan.jpg" Width="200" Height="150" alt=/></p>
