--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Melda Lia Lestari</title>
+    <title><b></b>Melda Lia Lestari</b></title>
   </head>
   <body>
     <h1>Hello, Selamat Datang di Website Perpustakaan SUKA BACA</h1>
