--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title><b></b>Melda Lia Lestari</b></title>
   </head>
   <body>
-    <h1>Hello, Selamat Datang di Website Perpustakaan SUKA BACA</h1>
+    <h1>Hello, Selamat Datang di Website Perpustakaan LESTARI BACA </h1>
     <nav class="navbar navbar-default">
     <div class="container-fuild">
     <!-- Brand and toggle get grouped for better mobile display-->
